--- a/src/app/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/ajanlat/ajanlat/ajanlat.html
@@ -38,14 +38,14 @@
     </div>
 
     <div class="editform-row">
-        <input type="text" class="editform-edit em10width" id="netto" style="text-align:right;display: inline-block"
-               disabled="true" [(ngModel)]="AjanlatParam.Netto">
+        <input type="text" class="editform-number" id="netto"
+               disabled [(ngModel)]="AjanlatParam.Netto">
 
-        <input type="text" class="editform-edit em10width" id="afa" style="text-align:right;display: inline-block"
-               disabled="true" [(ngModel)]="AjanlatParam.Afa">
+        <input type="text" class="editform-number" id="afa"
+               disabled [(ngModel)]="AjanlatParam.Afa">
 
-        <input type="text" class="editform-edit em10width" id="brutto" style="text-align:right;display: inline-block"
-               disabled="true" [(ngModel)]="AjanlatParam.Brutto">
+        <input type="text" class="editform-number" id="brutto"
+               disabled [(ngModel)]="AjanlatParam.Brutto">
     </div>
 
     <div class="editform-row">
