--- a/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
@@ -45,7 +45,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Fizetési mód</div>
-      <input type="text" class="editform-edit zoomedit em10width" id="fizetesimod"
+      <input type="text" class="editform-edit zoomedit primitivwidth" id="fizetesimod"
              maxlength="20" required autocomplete="off"
              [(ngModel)]="ComplexDtoEdited.Dto.Fizetesimod">
       <button class="toolbutton" (click)="FizetesimodZoom()" [disabled] = "SzerkesztesMode !== 1" type="button">...</button>
