--- a/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
+++ b/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
@@ -9,7 +9,7 @@
 
     <div class="editform-row">
         <div class="editform-label">Megjegyzés</div>
-        <input type="text" class="tooledit em15width" id="megjegyzes"
+        <input type="text" class="tooledit megjegyzeswidth" id="megjegyzes"
                autocomplete="off"
                [(ngModel)]="megjegyzes" name="megjegyzes">
         <div style="color: red">Ha ez a mező üresen marad, automatikusan<br> az eredeti fájlnév kerül a megjegyzésbe.</div>
