--- a/src/app/kifizetes/kifizetes-szerkesztes/kifizetes-szerkesztes.component.html
+++ b/src/app/kifizetes/kifizetes-szerkesztes/kifizetes-szerkesztes.component.html
@@ -34,7 +34,7 @@
     <div class="editform-row">
       <div>
         <div class="editform-label">Fizetési mód</div>
-        <input type="text" class="editform-edit zoomedit em10width" id="fizetesimod"
+        <input type="text" class="editform-edit zoomedit primitivwidth" id="fizetesimod"
                maxlength="20" required autocomplete="off"
                [(ngModel)]="DtoEdited.Fizetesimod" name="fizetesimod">
         <button class="toolbutton" type="button"
