--- a/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
+++ b/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
       <div class="editform-label">ÁFA kulcs</div>
-      <input type="text" class="editform-edit em10width" id="afakulcs"
+      <input type="text" class="editform-edit primitivwidth" id="afakulcs"
              maxlength="10" required autocomplete="off"
              [(ngModel)]="DtoEdited.Afakulcs1" name="afakulcs">
     </div>
