--- a/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="editform-row">
         <div class="editform-label">Név</div>
-        <input type="text" class="editform-edit em15width" id="nev"
+        <input type="text" class="editform-edit primitivwidth" id="nev"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="DtoEdited.Nev" name="nev">
       </div>
