--- a/src/app/primitiv/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
+++ b/src/app/primitiv/termekdij/termekdij-szerkesztes/termekdij-szerkesztes.component.html
@@ -6,13 +6,13 @@
 
     <div class="editform-row">
         <div class="editform-label">KT</div>
-        <input type="text" class="editform-combo em6width" id="kt"
+        <input type="text" class="editform-edit em6width" id="kt"
                maxlength="30" required autocomplete="off"
                [(ngModel)]="DtoEdited.Termekdijkt" name="kt">
     </div>
     <div class="editform-row">
         <div class="editform-label">Megnevezés</div>
-        <input type="text" class="editform-combo em15width" id="megnevezes"
+        <input type="text" class="editform-edit primitivwidth" id="megnevezes"
                maxlength="50" required autocomplete="off"
                [(ngModel)]="DtoEdited.Termekdijmegnevezes" name="megnevezes">
     </div>
