--- a/src/app/primitiv/tevekenyseg/tevekenyseg-szerkesztes/tevekenyseg-szerkesztes.component.html
+++ b/src/app/primitiv/tevekenyseg/tevekenyseg-szerkesztes/tevekenyseg-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Tevékenység</div>
-      <input type="text" class="editform-combo em15width" id="kt"
+      <input type="text" class="editform-combo primitivwidth" id="kt"
              maxlength="30" required autocomplete="off"
              [(ngModel)]="DtoEdited.Tevekenyseg1" name="kt">
     </div>
