--- a/src/app/csoport/csoport-szerkesztes/csoport-szerkesztes.component.html
+++ b/src/app/csoport/csoport-szerkesztes/csoport-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Csoport</div>
-      <input type="text" class="editform-edit em10width" id="csoport1"
+      <input type="text" class="editform-edit primitivwidth" id="csoport1"
              maxlength="30" required autocomplete="off"
              [(ngModel)]="DtoEdited.Csoport1" name="csoport1">
     </div>
