--- a/src/app/primitiv/me/me-szerkesztes/me-szerkesztes.component.html
+++ b/src/app/primitiv/me/me-szerkesztes/me-szerkesztes.component.html
@@ -6,7 +6,7 @@
 
     <div class="editform-row">
       <div class="editform-label">Mennyiségi egység</div>
-      <input type="text" class="editform-edit em4width" id="me1"
+      <input type="text" class="editform-edit primitivwidth" id="me1"
              maxlength="10" required autocomplete="off"
              [(ngModel)]="DtoEdited.Me" name="me1">
     </div>
