--- a/src/styles.css
+++ b/src/styles.css
@@ -126,6 +126,15 @@ table tr.inactive td {
 .megjegyzeswidth {
   width: 50em;
 }
+.primitivwidth {
+  width: 15em;
+}
+.kisprimitivwidth {
+  width: 8em;
+}
+.cikkwidth {
+  width: 30em;
+}
 
 .editform-combo {
   outline: 0;
