--- a/src/app/logon/jelszocsere/jelszocsere.component.html
+++ b/src/app/logon/jelszocsere/jelszocsere.component.html
@@ -1,37 +1,25 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Jelszócsere</h5>
 
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">Régi jelszó</div>
-        <input type="password" class="editform-edit em10width" id="regijelszo"
-               maxlength="100" required autocomplete="off"
-               [(ngModel)]="regijelszo" name="regijelszo">
-      </div>
+        <input type="password" class="editform-edit passwordwidth" formControlName="regijelszo">
     </div>
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">Új jelszó</div>
-        <input type="password" class="editform-edit em10width" id="jelszo"
-               maxlength="100" required autocomplete="off"
-               [(ngModel)]="jelszo" name="jelszo">
-      </div>
+        <input type="password" class="editform-edit passwordwidth" formControlName="jelszo">
     </div>
 
     <div class="editform-row">
-      <div>
         <div class="editform-label">Új jelszó újra</div>
-        <input type="password" class="editform-edit em10width" id="jelszoujra"
-               maxlength="100" required autocomplete="off"
-               [(ngModel)]="jelszoujra" name="jelszoujra">
-      </div>
+        <input type="password" class="editform-edit passwordwidth" formControlName="jelszoujra">
     </div>
 
     <div class="editform-row-bottom">
-      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="toolbutton okbutton" type="submit" [disabled]="form.invalid">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
