--- a/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
+++ b/src/app/primitiv/irattipus/irattipus-szerkesztes/irattipus-szerkesztes.component.html
@@ -2,17 +2,15 @@
   <h5 *ngIf="uj">Új {{irattipusservice.cim | lowercase}}</h5>
   <h5 *ngIf="!uj">{{irattipusservice.cim}} módosítása</h5>
 
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
 
     <div class="editform-row">
       <div class="editform-label">Irattipus</div>
-      <input type="text" class="editform-edit primitivwidth" id="irattipus1"
-             maxlength="30" required autocomplete="off"
-             [(ngModel)]="DtoEdited.Irattipus1" name="irattipus1">
+      <input type="text" class="editform-edit primitivwidth" formControlName="irattipus">
     </div>
 
     <div class="editform-row-bottom">
-      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="toolbutton okbutton" type="submit" [disabled]="form.invalid">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
