--- a/src/app/primitiv/tevekenyseg/tevekenyseg-szerkesztes/tevekenyseg-szerkesztes.component.html
+++ b/src/app/primitiv/tevekenyseg/tevekenyseg-szerkesztes/tevekenyseg-szerkesztes.component.html
@@ -2,17 +2,15 @@
   <h5 *ngIf="uj">Új {{tevekenysegservice.cim | lowercase}}</h5>
   <h5 *ngIf="!uj">{{tevekenysegservice.cim}} módosítása</h5>
 
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
 
     <div class="editform-row">
       <div class="editform-label">Tevékenység</div>
-      <input type="text" class="editform-combo primitivwidth" id="kt"
-             maxlength="30" required autocomplete="off"
-             [(ngModel)]="DtoEdited.Tevekenyseg1" name="kt">
+      <input type="text" class="editform-combo primitivwidth" formControlName="tevekenyseg">
     </div>
 
     <div class="editform-row-bottom">
-      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="toolbutton okbutton" type="submit" [disabled]="form.invalid">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
