--- a/src/app/logon/bejelentkezes/bejelentkezes.component.html
+++ b/src/app/logon/bejelentkezes/bejelentkezes.component.html
@@ -1,26 +1,20 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Bejelentkezés</h5>
 
-  <form [formGroup]="form" (ngSubmit)="onSubmit()">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
 
     <div class="editform-row">
-      <div>
-        <div class="editform-label">Azonosító</div>
-        <input type="text" class="editform-edit em10width" id="azonosito"
-               formControlName="azonosito" autocomplete="off" #azonosito>
-      </div>
+      <div class="editform-label">Azonosító</div>
+      <input type="text" class="editform-edit em10width" formControlName="azonosito">
     </div>
 
     <div class="editform-row">
-      <div>
-        <div class="editform-label">Jelszó</div>
-        <input type="password" class="editform-edit em10width" id="jelszo"
-               formControlName="jelszo" autocomplete="off" #jelszo>
-      </div>
+      <div class="editform-label">Jelszó</div>
+      <input type="password" class="editform-edit passwordwidth" formControlName="jelszo">
     </div>
 
     <div class="editform-row-bottom">
-      <button class="toolbutton okbutton" type="submit" [disabled]="!form.valid">Ok</button>
+      <button class="toolbutton okbutton" type="submit" [disabled]="form.invalid">Ok</button>
     </div>
   </form>
 </div>
