--- a/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
@@ -2,48 +2,38 @@
   <h5 *ngIf="uj">Új {{felhasznaloservice.cim | lowercase}}</h5>
   <h5 *ngIf="!uj">{{felhasznaloservice.cim}} módosítása</h5>
 
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
 
     <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">Azonosító</div>
-        <input type="text" class="editform-edit em10width" id="azonosito"
-               maxlength="30" required autocomplete="off"
-               [(ngModel)]="DtoEdited.Azonosito" name="azonosito">
+        <input type="text" class="editform-edit em10width" formControlName="azonosito">
       </div>
       <div class="editform-row">
         <div class="editform-label">Név</div>
-        <input type="text" class="editform-edit primitivwidth" id="nev"
-               maxlength="100" required autocomplete="off"
-               [(ngModel)]="DtoEdited.Nev" name="nev">
+        <input type="text" class="editform-edit primitivwidth" formControlName="nev">
       </div>
       <div class="editform-row">
         <div class="editform-label">Telefon</div>
-        <input type="text" class="editform-edit em15width" id="telefon"
-               maxlength="50" required autocomplete="off"
-               [(ngModel)]="DtoEdited.Telefon" name="telefon">
+        <input type="text" class="editform-edit em15width" formControlName="telefon">
       </div>
       <div class="editform-row">
         <div class="editform-label">Email</div>
-        <input type="text" class="editform-edit em15width" id="email"
-               maxlength="50" required autocomplete="off"
-               [(ngModel)]="DtoEdited.Email" name="email">
+        <input type="text" class="editform-edit em15width" formControlName="email">
       </div>
     </div>
 
     <div class="editform-card">
       <div class="editform-row">
         <div class="editform-label">Státusz</div>
-        <select type="text" class="editform-combo em6width"
-                [(ngModel)]="DtoEdited.Statusz" name="statusz">
+        <select type="text" class="editform-combo" formControlName="statusz">
           <option>OK</option>
           <option>Tiltott</option>
         </select>
       </div>
       <div class="editform-row">
         <div class="editform-label">Log</div>
-        <select type="text" class="editform-combo"
-                [(ngModel)]="DtoEdited.Logonlog" name="log">
+        <select type="text" class="editform-combo" formControlName="logonlog">
           <option value="false">Nem</option>
           <option value="true">Igen</option>
         </select>
@@ -51,7 +41,7 @@
     </div>
 
     <div class="editform-row-bottom">
-      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="toolbutton okbutton" type="submit" [disabled]="form.invalid">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
