--- a/src/app/primitiv/helyseg/helyseg-szerkesztes/helyseg-szerkesztes.component.html
+++ b/src/app/primitiv/helyseg/helyseg-szerkesztes/helyseg-szerkesztes.component.html
@@ -2,17 +2,15 @@
   <h5 *ngIf="uj">Új {{helysegservice.cim | lowercase}}</h5>
   <h5 *ngIf="!uj">{{helysegservice.cim}} módosítása</h5>
 
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
 
     <div class="editform-row">
       <div class="editform-label">Helységnév</div>
-      <input type="text" class="editform-edit primitivwidth" id="helysegnev"
-             maxlength="100" required autocomplete="off"
-             [(ngModel)]="DtoEdited.Helysegnev" name="helysegnev">
+      <input type="text" class="editform-edit primitivwidth" formControlName="helysegnev">
     </div>
 
     <div class="editform-row-bottom">
-      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="toolbutton okbutton" type="submit" [disabled]="form.invalid">Ok</button>
       <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
