--- a/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
+++ b/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
@@ -1,18 +1,18 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Új bizonylat erről</h5>
 
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
     <ng-container *ngIf="!kesz">
       <div class="editform-row">
         <div class="editform-label">Az új bizonylat tipusa</div>
-        <select type="text" class="editform-combo" name="statusz" [(ngModel)]="entryindex">
+        <select type="text" class="editform-combo" formControlName="bizonylattipusok">
           <option *ngFor="let s of bizonylatservice.tipusok; let i = index" [value]="i" [disabled]=s[2]>{{s[0]}}</option>
         </select>
       </div>
 
       <div class="editform-row-bottom">
-        <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-        <button class="toolbutton" type="button" (click)="cancel()">Mégsem</button>
+        <button class="toolbutton okbutton" type="submit" [disabled]="form.invalid">Ok</button>
+        <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
       </div>
     </ng-container>
 
@@ -21,7 +21,7 @@
         Az új bizonylat elkészült, bizonylatkód: {{ujbizonylatkod}}
       </div>
       <div class="editform-row-bottom">
-        <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+        <button class="toolbutton okbutton" type="submit" [disabled]="form.invalid">Ok</button>
       </div>
     </ng-container>
   </form>
