--- a/src/app/projekt/projekt-export/projekt-export.component.html
+++ b/src/app/projekt/projekt-export/projekt-export.component.html
@@ -1,17 +1,13 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>{{projektservice.cim}} export</h5>
 
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
+  <div class="editform-row">
+    <div class="editform-label">{{projektcsoport}}</div>
+  </div>
 
-    <div class="editform-row">
-      <div class="editform-label">{{projektcsoport}}</div>
-    </div>
-
-    <div class="editform-row-bottom">
-      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
-    </div>
-
-  </form>
+  <div class="editform-row-bottom">
+    <button class="toolbutton okbutton" type="button" (click)="onSubmit()">Ok</button>
+    <button class="toolbutton" type="button" (click)="onCancel()">Mégsem</button>
+  </div>
 </div>
 
