--- a/src/app/riport/kimenoszamla/kimenoszamla.component.html
+++ b/src/app/riport/kimenoszamla/kimenoszamla.component.html
@@ -1,22 +1,20 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Kimenő számla</h5>
 
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" autocomplete="off">
 
     <div class="editform-row">
         <div class="editform-label">A teljesítés kelte</div>
-        <input type="date" class="editform-date" id="tol"
-               [(ngModel)]="tol" name="tol">
+        <input type="date" class="editform-date" formControlName="tol">
     </div>
 
     <div class="editform-row">
-        <input type="date" class="editform-date" id="ig"
-               [(ngModel)]="ig" name="ig">
+        <input type="date" class="editform-date" formControlName="ig">
     </div>
 
     <div class="editform-row-bottom">
-      <button class="toolbutton okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-      <!--<button class="editform-cancelbutton" type="button" (click)="onCancel()">Stop</button>-->
+      <button class="toolbutton okbutton" type="submit" [disabled]="form.invalid">Ok</button>
+      <button class="toolbutton" type="button" (click)="onCancel()" [disabled]="!eppFrissit">Stop</button>
     </div>
   </form>
 </div>
